textarea spacing for urls fixed

--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -36,7 +36,7 @@
 .textarea {
   padding: 20px;
   border-radius: 5px;
-  white-space: normal;
+  white-space: pre-wrap;
 }
 
 .textarea:focus {
